chore: cambios en contractcontroller para service2
