# src/entities/web3/contactController.ts
@@ -19,6 +19,7 @@ import { DEFAULT_RETURN_FORMAT } from 'web3'
 // import UniswapService from './uniswapService'
 import HardhatService from './hardhatService'
 import ContractService from './contractServiceBNBAave'
+import ContractService2 from './contractServiceBNBAave2'
 // TODO esto no funciona import * as CoinMarketCap from 'node-coinmarketcap-rest-api'
 
 @Route('contract')
@@ -27,11 +28,13 @@ export class contactController extends Controller {
   // private uniswapService: typeof UniswapService
   private hardhatService: typeof HardhatService
   private contractService: typeof ContractService
+  private contractService2: typeof ContractService2
   constructor() {
     super()
     // this.uniswapService = UniswapService
     this.hardhatService = HardhatService
     this.contractService = ContractService
+    this.contractService2 = ContractService2
   }
 
   /**
@@ -366,6 +369,20 @@ export class contactController extends Controller {
     public async dinamicContract(@Body() requestBody: { amount: string }): Promise<{ success: boolean, data: any | null; token?: string; message?: any }> {
       try {
         const contract = await this.contractService.main(requestBody.amount)
+        console.log('contract :>> ', contract)
+        return { success: true, data: "Ya interactuo", message: 'success' }
+      } catch (error) {
+        console.log('dio error');
+        this.setStatus(400) // HTTP 401 Unauthorized
+        return { success: false, data: null, message: 'Ocurrio un error' }
+      }
+    }
+
+    @SuccessResponse('200', 'Ok')
+    @Post('/dinamicContract2')
+    public async dinamicContract2(@Body() requestBody: { amount: string }): Promise<{ success: boolean, data: any | null; token?: string; message?: any }> {
+      try {
+        const contract = await this.contractService2.main(requestBody.amount)
         console.log('contract :>> ', contract)
         return { success: true, data: "Ya interactuo", message: 'success' }
       } catch (error) {
